--- a/my-first-pipeline/Jenkinsfile
+++ b/my-first-pipeline/Jenkinsfile
@@ -1,11 +1,11 @@
 pipeline {
   agent {
-    docker { image 'node:16-alpine' }
+    any { }
   }
   stages {
     stage('Test') {
       steps {
-        sh 'node --version'
+        sh 'uptime'
       }
     }
   }
